# faster-map

./: .gitignore  LICENSE.md  Makefile  dune-project  faster-map.opam
correctness/: correctness.ml  dune  jbuild
functions/: contrib.ml  dune  existing.ml  jbuild  naive.ml
generator/: dune  generator.ml  jbuild
memory/: dune  functions.ml  jbuild  jbuild.common
memory/base/: test.ml
memory/batteries/: test.ml
memory/containers/: test.ml
memory/naive/: dune  jbuild  test.ml
memory/proposed/: test.ml
memory/stdlib/: test.ml
memory/unrolled/: test.ml
reporter/: dune  graph.gnuplot  jbuild  reporter.ml
results/: core_bench.txt  faster_map.ml  faster_map.s  memory.txt
tester/: dune  jbuild  tester.ml
