opam-version: "2.0"
synopsis: "A tail-recursive list map with good performance for all list sizes. Not actually written in assembly"
authors: "<Anton Bachin> antonbachin@yahoo.com"
maintainer: "<Anton Bachin> antonbachin@yahoo.com"
homepage: "https://github.com/aantron/faster-map"
bug-reports: "https://github.com/aantron/faster-map/issues"

depends: [
  "base"
  "batteries"
  "containers"
  "core_bench"
  "dune" {build & >= "1.0"}
]
